--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -2,26 +2,96 @@
 @tailwind components;
 @tailwind utilities;
 
-:root {
-  --foreground-rgb: 0, 0, 0;
-  --background-start-rgb: 214, 219, 220;
-  --background-end-rgb: 255, 255, 255;
+@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;600;700&display=swap');
+
+@import url('https://fonts.googleapis.com/css2?family=Mooli&display=swap');
+
+
+* {
+  margin: 0px;
+  padding: 0;
+  box-sizing: border-box;
 }
 
-@media (prefers-color-scheme: dark) {
-  :root {
-    --foreground-rgb: 255, 255, 255;
-    --background-start-rgb: 0, 0, 0;
-    --background-end-rgb: 0, 0, 0;
-  }
+:root {
+  --primary-font-color: #144173;
 }
 
 body {
-  color: rgb(var(--foreground-rgb));
-  background: linear-gradient(
-      to bottom,
-      transparent,
-      rgb(var(--background-end-rgb))
-    )
-    rgb(var(--background-start-rgb));
+  color: var(--primary-font-color);
+}
+
+h1,
+h2,
+h3,
+h4,
+.p1 {
+  font-family: 'Poppins', sans-serif;
+}
+
+h5,
+h6,
+.p2 {
+  font-family: 'Mooli', sans-serif;
+}
+
+h1 {
+  font-size: 80px;
+  font-weight: bold;
+  line-height: 80px;
+  letter-spacing: -2px;
+}
+
+h2 {
+  font-size: 60px;
+  font-weight: bold;
+  line-height: 70px;
+  letter-spacing: 0px;
+}
+
+h3 {
+  font-size: 40px;
+  font-weight: bold;
+  line-height: auto;
+  letter-spacing: 0px;
+}
+
+h4 {
+  font-size: 26px;
+  font-weight: bold;
+  line-height: auto;
+  letter-spacing: 0px;
+}
+
+h5 {
+  font-size: 20px;
+  font-weight: medium;
+  line-height: auto;
+  letter-spacing: 0px;
+}
+
+h6 {
+  font-size: 18px;
+  font-weight: medium;
+  line-height: auto;
+  letter-spacing: 0px;
+}
+
+.p1 {
+  font-size: 17px;
+  font-weight: regular;
+  line-height: 24px;
+  letter-spacing: 0px;
+}
+
+.p2 {
+  font-size: 15px;
+  font-weight: regular;
+  line-height: 20px;
+  letter-spacing: 0px;
+}
+
+.gradient-bg {
+  background: rgb(179, 205, 255);
+  background: radial-gradient(circle, rgba(179, 205, 255, 1) 0%, rgba(119, 153, 202, 1) 100%);
 }
